concluindo a terceira historia de usuário